@@ -35,12 +35,6 @@ public class ConvertTextBlockToStringTest {
 
     @Test
     public void newLineAtEnd() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_13");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package helloworld;\n"
                         + "public class Test {\n"
@@ -53,7 +47,6 @@ public class ConvertTextBlockToStringTest {
                         + "    }\n"
                         + "}")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertTextBlockToString.class)
                 .findWarning("3:18-3:21:hint:" + Bundle.ERR_ConvertTextBlockToString())
                 .applyFix()
@@ -68,12 +61,6 @@ public class ConvertTextBlockToStringTest {
 
     @Test
     public void simpleTest() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_13");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package helloworld;\n"
                         + "public class Test {\n"
@@ -83,7 +70,6 @@ public class ConvertTextBlockToStringTest {
                         + "    }\n"
                         + "}")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertTextBlockToString.class)
                 .findWarning("3:18-3:21:hint:" + Bundle.ERR_ConvertTextBlockToString())
                 .applyFix()
@@ -98,12 +84,6 @@ public class ConvertTextBlockToStringTest {
 
     @Test
     public void multipleNewLine() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_13");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package helloworld;\n"
                         + "public class Test {\n"
@@ -119,7 +99,6 @@ public class ConvertTextBlockToStringTest {
                         + "    }\n"
                         + "}")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertTextBlockToString.class)
                 .findWarning("3:18-3:21:hint:" + Bundle.ERR_ConvertTextBlockToString())
                 .applyFix()
@@ -134,12 +113,6 @@ public class ConvertTextBlockToStringTest {
 
     @Test
     public void newLineAfter() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_13");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package helloworld;\n"
                         + "public class Test {\n"
@@ -154,7 +127,6 @@ public class ConvertTextBlockToStringTest {
                         + "    }\n"
                         + "}")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertTextBlockToString.class)
                 .findWarning("3:18-3:21:hint:" + Bundle.ERR_ConvertTextBlockToString())
                 .applyFix()
@@ -173,12 +145,6 @@ public class ConvertTextBlockToStringTest {
 
     @Test
     public void manyLineTextBlock() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_13");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package helloworld;\n"
                         + "public class Test {\n"
@@ -195,7 +161,6 @@ public class ConvertTextBlockToStringTest {
                         + "    }\n"
                         + "}")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertTextBlockToString.class)
                 .findWarning("3:18-3:21:hint:" + Bundle.ERR_ConvertTextBlockToString())
                 .applyFix()
@@ -210,12 +175,6 @@ public class ConvertTextBlockToStringTest {
 
     @Test
     public void twoLineTextBlock() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_13");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package helloworld;\n"
                         + "public class Test {\n"
@@ -226,7 +185,6 @@ public class ConvertTextBlockToStringTest {
                         + "    }\n"
                         + "}")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertTextBlockToString.class)
                 .findWarning("3:18-3:21:hint:" + Bundle.ERR_ConvertTextBlockToString())
                 .applyFix()
@@ -241,12 +199,6 @@ public class ConvertTextBlockToStringTest {
 
     @Test
     public void twoNewLines() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_13");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package helloworld;\n"
                         + "public class Test {\n"
@@ -258,7 +210,6 @@ public class ConvertTextBlockToStringTest {
                         + "    }\n"
                         + "}")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertTextBlockToString.class)
                 .findWarning("3:18-3:21:hint:" + Bundle.ERR_ConvertTextBlockToString())
                 .applyFix()
@@ -273,12 +224,6 @@ public class ConvertTextBlockToStringTest {
 
     @Test
     public void slashConvert() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_13");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package helloworld;\n"
                         + "public class Test {\n"
@@ -288,7 +233,6 @@ public class ConvertTextBlockToStringTest {
                         + "    }\n"
                         + "}")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertTextBlockToString.class)
                 .findWarning("3:18-3:21:hint:" + Bundle.ERR_ConvertTextBlockToString())
                 .applyFix()
@@ -303,12 +247,6 @@ public class ConvertTextBlockToStringTest {
 
     @Test
     public void escapeCharTextBlock() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_13");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package helloworld;\n"
                         + "public class Test {\n"
@@ -319,7 +257,6 @@ public class ConvertTextBlockToStringTest {
                         + "    }\n"
                         + "}")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertTextBlockToString.class)
                 .findWarning("3:18-3:21:hint:" + Bundle.ERR_ConvertTextBlockToString())
                 .applyFix()
@@ -334,12 +271,6 @@ public class ConvertTextBlockToStringTest {
 
     @Test
     public void escapeCharTextBlock2() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_13");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package helloworld;\n"
                         + "public class Test {\n"
@@ -354,7 +285,6 @@ public class ConvertTextBlockToStringTest {
                         + "    }\n"
                         + "}")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertTextBlockToString.class)
                 .findWarning("3:18-3:21:hint:" + Bundle.ERR_ConvertTextBlockToString())
                 .applyFix()
@@ -369,12 +299,6 @@ public class ConvertTextBlockToStringTest {
 
     @Test
     public void textBlockAsParameter1() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_13");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package test;\n"
                         + "\n"
@@ -385,7 +309,6 @@ public class ConvertTextBlockToStringTest {
                         + "    }\n"
                         + "}")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertTextBlockToString.class)
                 .findWarning("4:27-4:30:hint:" + Bundle.ERR_ConvertTextBlockToString())
                 .applyFix()
@@ -401,12 +324,6 @@ public class ConvertTextBlockToStringTest {
 
     @Test
     public void textBlockAsParameter2() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_13");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("class myClass{\n"
                         + "    public static void main(String[] args) {\n"
@@ -417,7 +334,6 @@ public class ConvertTextBlockToStringTest {
                         + "    }\n"
                         + "}")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertTextBlockToString.class)
                 .findWarning("2:27-2:30:hint:" + Bundle.ERR_ConvertTextBlockToString())
                 .applyFix()
