@@ -20,7 +20,6 @@ package org.netbeans.modules.java.hints.jdk;
 
 import org.netbeans.junit.NbTestCase;
 import org.netbeans.modules.java.hints.test.api.HintTest;
-import javax.lang.model.SourceVersion;
 import org.testng.annotations.Test;
 
 /**
@@ -35,12 +34,6 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
     
     @Test
     public void testSimple() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_17"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_17, skip tests
-            return;
-        }
         HintTest.create()
                 .input("package test;\n"
                         + "public class Test {\n"
@@ -58,8 +51,7 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "    }\n"
                         + "}\n"
                 )
-                .sourceLevel("17")
-                .options("--enable-preview")
+                .sourceLevel("21")
                 .run(ConvertToSwitchPatternInstanceOf.class)
                 .findWarning("3:8-3:10:verifier:" + Bundle.ERR_ConvertToSwitchPatternInstanceOf())
                 .applyFix()
@@ -79,12 +71,6 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
     
     @Test
     public void testSimpleNoHint() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_17"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_17, skip tests
-            return;
-        }
         HintTest.create()
                 .input("package test;\n"
                         + "public class Test {\n"
@@ -103,19 +89,12 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "}\n"
                 )
                 .sourceLevel("17")
-                .options("--enable-preview")
                 .run(ConvertToSwitchPatternInstanceOf.class)
-                .assertNotContainsWarnings("3:8-3:10:verifier:" + Bundle.ERR_ConvertToSwitchPatternInstanceOf());
+                .assertNotContainsWarnings(Bundle.ERR_ConvertToSwitchPatternInstanceOf());
     }
     
     @Test
     public void testSimplePatternMatch() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_17");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package test;\n"
                         + "public class Test {\n"
@@ -133,8 +112,7 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "        return formatted;\n"
                         + "    }"
                         + "}\n")
-                .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
+                .sourceLevel("21")
                 .run(ConvertToSwitchPatternInstanceOf.class)
                 .findWarning("4:8-4:10:verifier:" + Bundle.ERR_ConvertToSwitchPatternInstanceOf())
                 .applyFix()
@@ -158,12 +136,6 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
     
     @Test
     public void testSimplePatternMatchNoHint() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_17");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package test;\n"
                         + "public class Test {\n"
@@ -181,20 +153,13 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "        return formatted;\n"
                         + "    }"
                         + "}\n")
-                .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
+                .sourceLevel("21")
                 .run(ConvertToSwitchPatternInstanceOf.class)
-                .assertNotContainsWarnings("4:8-4:10:verifier:" + Bundle.ERR_ConvertToSwitchPatternInstanceOf());
+                .assertNotContainsWarnings(Bundle.ERR_ConvertToSwitchPatternInstanceOf());
     }
 
     @Test
     public void testSimpleSwitchWithNull() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_17");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package test;\n"
                         + "public class Test {\n"
@@ -217,8 +182,7 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "        return formatted;\n"
                         + "    }"
                         + "}\n")
-                .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
+                .sourceLevel("21")
                 .run(ConvertToSwitchPatternInstanceOf.class)
                 .findWarning("4:8-4:24:verifier:" + Bundle.ERR_ConvertToSwitchPatternInstanceOf())
                 .applyFix()
@@ -247,12 +211,6 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
     
     @Test
     public void testSimpleSwitchWithNullNoHint() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_17");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package test;\n"
                         + "public class Test {\n"
@@ -275,20 +233,13 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "        return formatted;\n"
                         + "    }"
                         + "}\n")
-                .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
+                .sourceLevel("21")
                 .run(ConvertToSwitchPatternInstanceOf.class)
-                .assertNotContainsWarnings("4:8-4:24:verifier:" + Bundle.ERR_ConvertToSwitchPatternInstanceOf());
+                .assertNotContainsWarnings(Bundle.ERR_ConvertToSwitchPatternInstanceOf());
     }
 
     @Test
     public void testSingleStatementsStaticVariable() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_17");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package test;\n"
                         + "public class Test {\n"
@@ -312,8 +263,7 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "class Test2{\n"
                         + "     public static Object a;\n"
                         + "}")
-                .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
+                .sourceLevel("21")
                 .run(ConvertToSwitchPatternInstanceOf.class)
                 .findWarning("4:8-4:10:verifier:" + Bundle.ERR_ConvertToSwitchPatternInstanceOf())
                 .applyFix()
@@ -342,12 +292,6 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
 
     @Test
     public void testMultipleStatements() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_17");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package test;\n"
                         + "public class Test {\n"
@@ -372,8 +316,7 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "        return -1;\n"
                         + "    }"
                         + "}\n")
-                .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
+                .sourceLevel("21")
                 .run(ConvertToSwitchPatternInstanceOf.class)
                 .findWarning("4:8-4:10:verifier:" + Bundle.ERR_ConvertToSwitchPatternInstanceOf())
                 .applyFix()
@@ -407,12 +350,6 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
 
     @Test
     public void testEmptyStatementsMethodInvocation() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_17");
-        } catch (IllegalArgumentException ex) {
-            //OK, skip test
-            return;
-        }
         HintTest.create()
                 .input("package test;\n"
                         + "public class Test {\n"
@@ -436,8 +373,7 @@ public class ConvertToSwitchPatternInstanceOfTest extends NbTestCase {
                         + "         return \"method invocation\";\n"
                         + "     }"
                         + "}")
-                .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
+                .sourceLevel("21")
                 .run(ConvertToSwitchPatternInstanceOf.class)
                 .findWarning("4:8-4:10:verifier:" + Bundle.ERR_ConvertToSwitchPatternInstanceOf())
                 .applyFix()
